# demo

./: .gitignore  CNAME  README.md  index.html
.spacemacs.d/: init.el
06_STL/: main.cpp
06_STL_interator/: main.cpp
CommunitaionSystem/Client/: Client.pro  client.cpp  client.h  common.h  main.cpp
CommunitaionSystem/Server/: CMakeLists.txt  README.md  makefile
CommunitaionSystem/Server/include/: common.h  server.h
CommunitaionSystem/Server/src/: common.cpp  main.cpp  server.cpp
CommunitaionSystem/client/: main.cpp
CommunitaionSystem/server/: main.cpp
CppPrimer/: CMakeLists.txt  CppPrimer.pro  _1.h  _10.h  _2.h  _3.h  _4.h  _5.h  _6.cpp  _6.h  _7.cpp  _7.h  _9.cpp  _9.h  main.cpp
CppPrimer/include/: _8.h  avl.h  sort.h
CppPrimer/src/: _4.cpp  _5.cpp  _8.cpp  main.cpp  sort.cpp
HttpServer/: CMakeLists.txt
HttpServer/include/: handler.h  http.h  log.h  server.h  system.h  thread_pool.h  utils.h
HttpServer/src/: handler.cpp  http.cpp  log.cpp  main.cpp  server.cpp  system.cpp  utils.cpp
HttpServer/www/: index.html  test  test.sh
ManageSystem/: employee.cpp  employee.h  manageSystem.pro  salesmanager.h  technician.cpp
PythonWeb/www/: BaseServer.py  HttpServer.py  RequestParser.py  ResponseHelper.py  (+2 more)
cal/: Calculator.py
client/: main.cpp.autosave
docker_restdemo/: Dockerfile  README.md  build.sh
hanoi/: disk.cpp  disk.h  hanoi.pro  main.cpp
manageSystem/: main.cpp  manager.cpp  manager.h  salesman.cpp  salesman.h  salesmanager.cpp  technician.h
myPair/: main.cpp  myPair.pro  mypair.h
mylife/: 2017.3.20
tsh/: CMakeLists.txt
(+12 files in other folders)
